<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/scanCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_customer_data"/>

    <TextView
        android:id="@+id/customerDataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_data_none"/>

    <Button
        android:id="@+id/clearCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_customer_data"/>

    <Button
        android:id="@+id/scanPurchaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_purchase_data"/>

    <TextView
        android:id="@+id/purchaseDataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_data_none"/>

    <Button
        android:id="@+id/clearPurchaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_purchase_data"/>

    <Button
        android:id="@+id/sendDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_data_to_server"/>
</LinearLayout>
